Fix up formatting of thesis

--- a/References.bib
+++ b/References.bib
@@ -162,7 +162,7 @@
 }
 
 
-@book{nawaz_survey_2019,
+@article{nawaz_survey_2019,
 	title = {A {Survey} on {Theorem} {Provers} in {Formal} {Methods}},
 	author = {Nawaz, M. Saqib and Malik, Moin and Li, Yi and Sun, Meng and Lali, M. Ikram Ullah},
 	year = {2019},
@@ -1206,4 +1206,12 @@ Publisher: Association for Computing Machinery},
   note    = {\url{https://isa-afp.org/entries/Category3.html},
             Formal proof development},
   ISSN    = {2150-914x},
+}
+
+@article{four_colour_2008,
+  author = {Gonthier, Geogres},
+  title = {Formal Proof — The Four-Color Theorem},
+  journal = {Notices American Mathematical Society},
+  year = {2008},
+  pages = {1382–-1393},
 }
