--- a/index.tex
+++ b/index.tex
@@ -677,9 +677,12 @@ ITPs}\label{general-features-of-about-itps}}
 To compare between different ITPs, general features about them need to
 be collected.
 
-We decided to use a Systematic Literature Reviews on Theorem Provers as
-our starting dataset
-{[}\protect\hyperlink{ref-nawaz_survey_2019}{33}{]}.
+We decided to use a 2019 Systematic Literature Reviews on Theorem
+Provers as our starting dataset
+{[}\protect\hyperlink{ref-nawaz_survey_2019}{33}{]}. This review went
+through 27 theorem provers and described the features that each prover
+had. This was converted into a dataset and used to compare general
+features.
 
 This dataset contained several properties about ITPs, and properties to
 compare between them.
@@ -699,9 +702,9 @@ The full set of properties are:
 \item
   Whether it has a library
 \item
-  What it's calculus is
+  What its calculus is
 \item
-  What's it's architecture
+  What's its architecture
 \item
   The programming language it's based on
 \item
@@ -717,10 +720,16 @@ The full set of properties are:
 \item
   When it was first released.
 \item
-  It's latest release
+  Its latest release
 \end{itemize}
 
-Newer ITPs are added manually to the dataset.
+A lot of these features (such as the logic, truth value etc) require
+explanations as to what they refer to. These explanations will be
+included within the tool. This allows people unfamiliar to the field to
+learn what the components of ITPs are and why they are important.
+
+Some Newer ITPs were not included in the dataset, such as Lean, F* and
+Idris. These were added manually to the dataset.
 
 The systematic literature review we source our data from however, is
 already out of date for the latest release of its provers. As of such,
@@ -750,9 +759,9 @@ different usability issues will be reported in this living review.
 \section{Literature Review}\label{literature-review}}
 
 The amount of papers found in each section of the review are shown in
-table~\protect\hyperlink{tab:litresults}{1}. This totals to 45 papers
-found on the topic. However, 1 paper had to be remove due to not being
-able to access it, making 44.
+tbl.~\ref{tbl:litresults}. This totals to 45 papers found on the topic.
+However, 1 paper had to be remove due to not being able to access it,
+making 44.
 
 There was a surprisingly small amount of papers caught by query in
 comparison to snowballing. This is because many papers that discuss
@@ -764,9 +773,9 @@ for ITPs. However, comparatively little research has been done
 identifying the issues with ITP interfaces and empirically comparing
 these user interface modifications for merit (10/38 of the papers).
 
-\hypertarget{tab:litresults}{}
+\hypertarget{tbl:litresults}{}
 \begin{longtable}[]{@{}lll@{}}
-\caption{Literature review papers}\tabularnewline
+\caption{\label{tbl:litresults}Literature review papers}\tabularnewline
 \toprule
 Round & Found & Relevant \\
 \midrule
@@ -783,8 +792,6 @@ Snowball 4 & 44 & 1 \\
 Snowball 5 & 4 & 0 \\
 \bottomrule
 \end{longtable}
-
-\protect\hypertarget{tab:litresults}{}{{[}tab:litresults{]}}
 
 When going through papers, it was interesting to find a large amount of
 papers proposing user interface models, but not actually identifying the
@@ -901,7 +908,7 @@ textual ITPs often involves a very simple read-evaluate-print-loop
 (REPL) for their interfaces. One very stark example of this is
 HOL-Light, which you interact with by opening up the OCaml REPL (a
 general purpose ML based functional programming language) and loading
-the HOL library. All Ocaml is available to you alongside the HOL
+the HOL library. All OCaml is available to you alongside the HOL
 library. Although this is rather primitive, modern ITP interfaces such
 as Isabelle/jEdit and CoqIDE usually offer only a small layer of
 abstraction over a REPL for their own languages.
@@ -1032,11 +1039,10 @@ hand, theorem provers such as Isabelle and Agda allow using mathematical
 notation in their theorems. This helps the user understand the theorem
 in a terse syntax. On the other hand, mathematical notation can often be
 ambiguous and difficult to type. Isabelle allows using LaTeX~style
-commands such as\\
-rightarrow to render math notation, whereas Agda allows Unicode in
-source files. In order to avoid ambiguity, Coq has no support for math
-notation, and in response to this, Matita has LaTeX~style mathematical
-notation~{[}\protect\hyperlink{ref-asperti_user_2007}{3},
+commands such as rightarrow to render math notation, whereas Agda allows
+Unicode in source files. In order to avoid ambiguity, Coq has no support
+for math notation, and in response to this, Matita has LaTeX~style
+mathematical notation~{[}\protect\hyperlink{ref-asperti_user_2007}{3},
 \protect\hyperlink{ref-zacchiroli_user_2007}{42}{]}. This issue came up
 in three different sources.
 
@@ -1709,7 +1715,13 @@ has not been tested empirically against other ITPs
 Many problems were identified. A summary of the problem is tabulated in
 fig.~\ref{fig:usability_issues}.
 
-\includegraphics{./Images/MyProblem.png} \{\#fig:usability\_issues\}
+\begin{figure}
+\hypertarget{fig:usability_issues}{%
+\centering
+\includegraphics{./Images/MyProblem.png}
+\caption{Identified Usability Issues}\label{fig:usability_issues}
+}
+\end{figure}
 
 This analysis answers Research Question 1.
 
@@ -1724,6 +1736,21 @@ https://samnolan.me/thesis
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
+
+This living literature review offers a lot to the field of ITPs.
+
+It tracks progress on different ITPs, allowing people new to the field
+to get familiar with different ITPs and the differences between them.
+This lowers the bar for entry into ITP research and usage, hopefully
+encouraging more usage
+
+It further helps those who want to contribute, either in projects or
+packages, to the theorem provers. It helps them identify whether their
+task has already been completed, or what gaps exist that they could fill
+in ITP support.
+
+It also offers an honest summary of the field for people interested in
+starting using ITPs in their own projects and verify their own software.
 
 \hypertarget{bibliography}{%
 \section*{Bibliography}\label{bibliography}}
