--- a/References.bib
+++ b/References.bib
@@ -1236,3 +1236,9 @@ isbn = {9780444516244},
 journal = {Handbook of the History of Logic},
 doi = {10.1016/B978-0-444-51624-4.50004-6}
 }
+
+@misc{msc2021,
+author = {{Associate Editors of Mathematical Reviews and zbMATH}},
+year = {2020},
+title = {MSC2020-Mathematics Subject Classification System}
+}
