--- a/References.bib
+++ b/References.bib
@@ -11,7 +11,6 @@
 	series = {{PPDP} '10},
 	title = {On {Theorem} {Proving} for {Program} {Checking}: {Historical} {Perspective} and {Recent} {Developments}},
 	isbn = {978-1-4503-0132-9},
-	url = {https://doi-org.ezproxy.lib.rmit.edu.au/10.1145/1836089.1836090},
 	doi = {10.1145/1836089.1836090},
 	abstract = {This article is a survey of recent results, related works and new challenges in automated theorem proving for program checking. The aim is to give some historical perspective, albeit necessarily incomplete, and highlight some of the turning points that made crucial advances possible.},
 	booktitle = {Proceedings of the 12th {International} {ACM} {SIGPLAN} {Symposium} on {Principles} and {Practice} of {Declarative} {Programming}},
@@ -44,7 +43,6 @@
 	series = {{HILT} '14},
 	title = {The {Rust} {Language}},
 	isbn = {978-1-4503-3217-0},
-	url = {https://doi-org.ezproxy.lib.rmit.edu.au/10.1145/2663171.2663188},
 	doi = {10.1145/2663171.2663188},
 	abstract = {Rust is a new programming language for developing reliable and efficient systems. It is designed to support concurrency and parallelism in building applications and libraries that take full advantage of modern hardware. Rust's static type system is safe1 and expressive and provides strong guarantees about isolation, concurrency, and memory safety.Rust also offers a clear performance model, making it easier to predict and reason about program efficiency. One important way it accomplishes this is by allowing fine-grained control over memory representations, with direct support for stack allocation and contiguous record storage. The language balances such controls with the absolute requirement for safety: Rust's type system and runtime guarantee the absence of data races, buffer overflows, stack overflows, and accesses to uninitialized or deallocated memory.},
 	booktitle = {Proceedings of the 2014 {ACM} {SIGAda} {Annual} {Conference} on {High} {Integrity} {Language} {Technology}},
@@ -62,12 +60,11 @@
   url = {https://guide.elm-lang.org/}
 }
 
-@inproceedings{klein_sel4_2009,
+@inproceedings{Sel4,
 	address = {New York, NY, USA},
 	series = {{SOSP} '09},
 	title = {{SeL4}: {Formal} {Verification} of an {OS} {Kernel}},
 	isbn = {978-1-60558-752-3},
-	url = {https://doi.org/10.1145/1629575.1629596},
 	doi = {10.1145/1629575.1629596},
 	abstract = {Complete formal verification is the only known way to guarantee that a system is free of programming errors.We present our experience in performing the formal, machine-checked verification of the seL4 microkernel from an abstract specification down to its C implementation. We assume correctness of compiler, assembly code, and hardware, and we used a unique design approach that fuses formal and operating systems techniques. To our knowledge, this is the first formal proof of functional correctness of a complete, general-purpose operating-system kernel. Functional correctness means here that the implementation always strictly follows our high-level abstract specification of kernel behaviour. This encompasses traditional design and implementation safety properties such as the kernel will never crash, and it will never perform an unsafe operation. It also proves much more: we can predict precisely how the kernel will behave in every possible situation.seL4, a third-generation microkernel of L4 provenance, comprises 8,700 lines of C code and 600 lines of assembler. Its performance is comparable to other high-performance L4 kernels.},
 	booktitle = {Proceedings of the {ACM} {SIGOPS} 22nd {Symposium} on {Operating} {Systems} {Principles}},
@@ -80,10 +77,9 @@
 }
 
 
-@article{leroy_formal_2009,
+@article{CompCert,
 	title = {Formal verification of a realistic compiler},
 	volume = {52},
-	url = {http://xavierleroy.org/publi/compcert-CACM.pdf},
 	abstract = {This paper reports on the development and formal verification (proof of semantic preservation) of CompCert, a compiler from Clight (a large subset of the C programming language) to PowerPC assembly code, using the Coq proof assistant both for programming the compiler and for proving its correctness. Such a verified compiler is useful in the context of critical software and its formal verification: the verification of the compiler guarantees that the safety properties proved on the source code hold for the executable compiled code as well.},
 	number = {7},
 	journal = {Communications of the ACM},
@@ -96,7 +92,6 @@
 	title = {Practitioners' views on the use of formal methods: an industrial survey by structured interview},
 	volume = {43},
 	issn = {0950-5849},
-	url = {http://www.sciencedirect.com/science/article/pii/S095058490000166X},
 	doi = {10.1016/S0950-5849(00)00166-X},
 	abstract = {The recognised deficiency in the level of empirical investigation of software engineering methods is particularly acute in the area of formal methods, where reports about their usefulness vary widely. We interviewed several formal methods users about the use of formal methods and their impact on various aspects of software engineering including the effects on the company, its products and its development processes as well as pragmatic issues such as scalability, understandability and tool support. The interviews are a first stage of empirical assessment. Future work will investigate some of the issues raised using formal experimentation and case studies.},
 	number = {4},
@@ -193,7 +188,6 @@
 	series = {{HOPL} {III}},
 	title = {A {History} of {Haskell}: {Being} {Lazy} with {Class}},
 	isbn = {978-1-59593-766-7},
-	url = {https://doi.org/10.1145/1238844.1238856},
 	doi = {10.1145/1238844.1238856},
 	abstract = {This paper describes the history of Haskell, including its genesis and principles, technical contributions, implementations and tools, and applications and impact.},
 	booktitle = {Proceedings of the {Third} {ACM} {SIGPLAN} {Conference} on {History} of {Programming} {Languages}},
@@ -209,7 +203,6 @@
 	title = {Hasochism: {The} {Pleasure} and {Pain} of {Dependently} {Typed} {Haskell} {Programming}},
 	volume = {48},
 	issn = {0362-1340},
-	url = {https://doi-org.ezproxy.lib.rmit.edu.au/10.1145/2578854.2503786},
 	doi = {10.1145/2578854.2503786},
 	abstract = {Haskell's type system has outgrown its Hindley-Milner roots to the extent that it now stretches to the basics of dependently typed programming. In this paper, we collate and classify techniques for programming with dependent types in Haskell, and contribute some new ones. In particular, through extended examples—merge-sort and rectangular tilings—we show how to exploit Haskell's constraint solver as a theorem prover, delivering code which, as Agda programmers, we envy. We explore the compromises involved in simulating variations on the theme of the dependent function space in an attempt to help programmers put dependent types to work, and to inform the evolving language design both of Haskell and of dependently typed languages more broadly.},
 	number = {12},
@@ -228,7 +221,6 @@ Publisher: Association for Computing Machinery},
 	address = {Boston, MA},
 	title = {{ACL2} and {Its} {Applications} to {Digital} {System} {Verification}},
 	isbn = {978-1-4419-1539-9},
-	url = {https://doi.org/10.1007/978-1-4419-1539-9_1},
 	abstract = {We describe a methodology for using a mechanical theorem proving system, ACL2, to verify correctness properties for digital system models. After introducing some of the basic terminology and some of the decisions facing those who wish to formalize digital systems, we introduce ACL2, A Computational Logic for Applicative Common Lisp, which is a functional programming language, a first-order mathematical logic, and a proof development environment including a powerful interactive automated theorem prover. We then show how a simple digital system can be formalized in ACL2 and exhibit or describe formal properties provable about it. We conclude with some bibliographic references to examples of variations of the illustrated approach, various proof strategies, and examples of industrial interest.},
 	booktitle = {Design and {Verification} of {Microprocessor} {Systems} for {High}-{Assurance} {Applications}},
 	publisher = {Springer US},
@@ -252,7 +244,6 @@ Publisher: Association for Computing Machinery},
 	title = {Dependent {Types} and {Multi}-{Monadic} {Effects} in {F}*},
 	volume = {51},
 	issn = {0362-1340},
-	url = {https://doi-org.ezproxy.lib.rmit.edu.au/10.1145/2914770.2837655},
 	doi = {10.1145/2914770.2837655},
 	abstract = {We present a new, completely redesigned, version of F*, a language that works both as a proof assistant as well as a general-purpose, verification-oriented, effectful programming language. In support of these complementary roles, F* is a dependently typed, higher-order, call-by-value language with \_primitive\_ effects including state, exceptions, divergence and IO. Although primitive, programmers choose the granularity at which to specify effects by equipping each effect with a monadic, predicate transformer semantics. F* uses this to efficiently compute weakest preconditions and discharges the resulting proof obligations using a combination of SMT solving and manual proofs. Isolated from the effects, the core of F* is a language of pure functions used to write specifications and proof terms—its consistency is maintained by a semantic termination check based on a well-founded order. We evaluate our design on more than 55,000 lines of F* we have authored in the last year, focusing on three main case studies. Showcasing its use as a general-purpose programming language, F* is programmed (but not verified) in F*, and bootstraps in both OCaml and F\#. Our experience confirms F*'s pay-as-you-go cost model: writing idiomatic ML-like code with no finer specifications imposes no user burden. As a verification-oriented language, our most significant evaluation of F* is in verifying several key modules in an implementation of the TLS-1.2 protocol standard. For the modules we considered, we are able to prove more properties, with fewer annotations using F* than in a prior verified implementation of TLS-1.2. Finally, as a proof assistant, we discuss our use of F* in mechanizing the metatheory of a range of lambda calculi, starting from the simply typed lambda calculus to System F-omega and even micro-F*, a sizeable fragment of F* itself—these proofs make essential use of F*'s flexible combination of SMT automation and constructive proofs, enabling a tactic-free style of programming and proving at a relatively large scale.},
 	number = {1},
@@ -374,7 +365,7 @@ Publisher: Association for Computing Machinery},
 }
 
 
-@book{jean_karim_zinzindohoue_hacl_2017,
+@book{HACL,
 	title = {{HACL}*: {A} {Verified} {Modern} {Cryptographic} {Library}},
 	author = {Jean Karim Zinzindohoué, Karthikeyan Bhargavan, Jonathan Protzenko, Benjamin Beurdouche},
 	year = {2017},
@@ -382,7 +373,7 @@ Publisher: Association for Computing Machinery},
 	file = {2017-536.pdf:/home/sam/Books/2017-536.pdf:application/pdf}
 }
 
-@inproceedings{de_moura_lean_2015,
+@inproceedings{Lean,
 	address = {Cham},
 	title = {The {Lean} {Theorem} {Prover} ({System} {Description})},
 	isbn = {978-3-319-21401-6},
@@ -664,7 +655,6 @@ Publisher: Association for Computing Machinery},
 	series = {{ASE} 2016},
 	title = {An {Empirical} {Evaluation} of {Two} {User} {Interfaces} of an {Interactive} {Program} {Verifier}},
 	isbn = {978-1-4503-3845-5},
-	url = {https://doi-org.ezproxy.lib.rmit.edu.au/10.1145/2970276.2970303},
 	doi = {10.1145/2970276.2970303},
 	abstract = {Theorem provers have highly complex interfaces, but there are not many systematic studies of their usability and effectiveness. Specifically, for interactive theorem provers the ability to quickly comprehend intermediate proof situations is of pivotal importance. In this paper we present the (as far as we know) first empirical study that systematically compares the effectiveness of different user interfaces of an interactive theorem prover. We juxtapose two different user interfaces of the interactive verifier KeY: the traditional one which focuses on proof objects and a more recent one that provides a view akin to an interactive debugger. We carefully designed a controlled experiment where users were given various proof understanding tasks that had to be solved with alternating interfaces. We provide statistical evidence that the conjectured higher effectivity of the debugger-like interface is not just a hunch.},
 	booktitle = {Proceedings of the 31st {IEEE}/{ACM} {International} {Conference} on {Automated} {Software} {Engineering}},
@@ -1243,19 +1233,6 @@ year = {2020},
 title = {MSC2020-Mathematics Subject Classification System}
 }
 
-@misc{leanprover, title={Theorem Proving in Lean}, url={https://kilthub.cmu.edu/articles/journal_contribution/Theorem_Proving_in_Lean/6492902/1}, DOI={10.1184/R1/6492902.v1}, abstractNote={
-Formal verification involves the use of logical and computational methods to establish claims that are expressed in precise mathematical terms. These can include ordinary mathematical theorems, as well as claims that pieces of hardware or software, network protocols, and mechanical and hybrid systems meet their specifications. In practice, there is not a sharp distinction between verifying a piece of mathematics and verifying the correctness of a system: formal verification requires describing hardware and software systems in mathematical terms, at which point establishing claims as to their correctness becomes a form of theorem proving. Conversely, the proof of a mathematical theorem may require a lengthy computation, in which case verifying the truth of the theorem requires verifying that the computation does what it is supposed to do.
-
-The gold standard for supporting a mathematical claim is to provide a proof, and twentieth-century developments in logic show most if not all conventional proof methods can be reduced to a small set of axioms and rules in any of a number of foundational systems. With this reduction, there are two ways that a computer can help establish a claim: it can help find a proof in the first place, and it can help verify that a purported proof is correct.
-
-Automated theorem proving focuses on the “finding” aspect. Resolution theorem provers, tableau theorem provers, fast satisfiability solvers, and so on provide means of establishing the validity of formulas in propositional and first-order logic. Other systems provide search procedures and decision procedures for specific languages and domains, such as linear or nonlinear expressions over the integers or the real numbers. Architectures like SMT (“satisfiability modulo theories”) combine domain-general search methods with domain-specific procedures. Computer algebra systems and specialized mathematical software packages provide means of carrying out mathematical computations, establishing mathematical bounds, or finding mathematical objects. A calculation can be viewed as a proof as well, and these systems, too, help establish mathematical claims.
-
-Automated reasoning systems strive for power and efficiency, often at the expense of guaranteed soundness. Such systems can have bugs, and it can be difficult to ensure that the results they deliver are correct. In contrast, interactive theorem proving focuses on the “verification” aspect of theorem proving, requiring that every claim is supported by a proof in a suitable axiomatic foundation. This sets a very high standard: every rule of inference and every step of a calculation has to be justified by appealing to prior definitions and theorems, all the way down to basic axioms and rules. In fact, most such systems provide fully elaborated “proof objects” that can be communicated to other systems and checked independently. Constructing such proofs typically requires much more input and interaction from users, but it allows us to obtain deeper and more complex proofs.
-
-The Lean Theorem Prover aims to bridge the gap between interactive and automated theorem proving, by situating automated tools and methods in a framework that supports user interaction and the construction of fully specified axiomatic proofs. The goal is to support both mathematical reasoning and reasoning about complex systems, and to verify claims in both domains.
-
-}, publisher={Carnegie Mellon University}, author={Avigad, Jeremy and de Moura, Leonardo and Kong, Soonho}, year={2018}, month={Jun} }
-
 @InProceedings{HOL_Light,
 author="Harrison, John",
 editor="Berghofer, Stefan
@@ -1314,12 +1291,11 @@ isbn="978-3-642-15582-6"
   year={{2005}}
 }
 
-@Inbook{ACL2,
+@Book{ACL2,
 author="Kaufmann, Matt
 and Manolios, Panagiotis
 and Moore, J. Strother",
-title="Introduction",
-bookTitle="Computer-Aided Reasoning: An Approach",
+title="Computer-Aided Reasoning: An Approach",
 year="2000",
 publisher="Springer US",
 address="Boston, MA",
@@ -1329,3 +1305,276 @@ isbn="978-1-4615-4449-4",
 doi="10.1007/978-1-4615-4449-4_1",
 url="https://doi.org/10.1007/978-1-4615-4449-4_1"
 }
+
+@inproceedings{Agda,
+author = {Norell, Ulf},
+title = {Dependently Typed Programming in Agda},
+year = {2009},
+isbn = {9781605584201},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1481861.1481862},
+doi = {10.1145/1481861.1481862},
+abstract = {Dependently typed languages have for a long time been used to describe proofs about
+programs. Traditionally, dependent types are used mostly for stating and proving the
+properties of the programs and not in defining the programs themselves. An impressive
+example is the certified compiler by Leroy (2006) implemented and proved correct in
+Coq (Bertot and Cast\'{e}ran 2004).Recently there has been an increased interest in dependently
+typed programming, where the aim is to write programs that use the dependent type
+system to a much higher degree. In this way a lot of the properties that were previously
+proved separately can be integrated in the type of the program, in many cases adding
+little or no complexity to the definition of the program. New languages, such as Epigram
+(McBride and McKinna 2004), are being designed, and existing languages are being extended
+with new features to accomodate these ideas, for instance the work on dependently
+typed programming in Coq by Sozeau (2007).This talk gives an overview of the Agda
+programming language (Norell 2007), whose main focus is on dependently typed programming.
+Agda provides a rich set of inductive types with a powerful mechanism for pattern
+matching, allowing dependently typed programs to be written with minimal fuss. To
+read about programming in Agda, see the lecture notes from the Advanced Functional
+Programming summer school (Norell 2008) and the work by Oury and Swierstra (2008).In
+the talk a number of examples of interesting dependently typed programs chosen from
+the domain of programming language implementation are presented as they are implemented
+in Agda.},
+booktitle = {Proceedings of the 4th International Workshop on Types in Language Design and Implementation},
+pages = {1–2},
+numpages = {2},
+keywords = {programming, dependent types},
+location = {Savannah, GA, USA},
+series = {TLDI '09}
+}
+
+@Book{Isabelle,
+editor="Paulson, Lawrence C.",
+title="Isabelle: A Generic Theorem Prover",
+year="1994",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+isbn="978-3-540-48586-5",
+doi="10.1007/BFb0030542",
+url="https://doi.org/10.1007/BFb0030542"
+}
+
+@book{Metamath,
+  author={{Norman Megill}},
+  title={{Metamath: A Computer Language for Pure Mathematics}},
+  publisher={{Lulu Press USA}},
+  year={{2007}}
+}
+
+@article{Mizar, title={Mizar in a Nutshell}, volume={3}, url={https://jfr.unibo.it/article/view/1980}, DOI={10.6092/issn.1972-5787/1980}, abstractNote={This paper is intended to be a practical reference manual for basic Mizar terminology which may be helpful to get started using the system. The paper describes most important aspects of the Mizar language as well as some features of the verification software.}, number={2}, journal={Journal of Formalized Reasoning}, author={Grabowski, Adam and Kornilowicz, Artur and Naumowicz, Adam}, year={2010}, month={Jan.}, pages={153–245} }
+
+@Inproceedings{RedPRL,
+  author    = {Angiuli, Carlo and Cavallo, Evan and Hou (Favonia), Kuen-Bang and Harper, Robert and Sterling, Jonathan},
+  year      = {2018},
+  title     = {The RedPRL Proof Assistant (Invited Paper)},
+  editor    = {Blanqui, Fr\'ed\'eric and Reis, Giselle},
+  booktitle = {{\rm Proceedings of the 13th International Workshop on}
+               Logical Frameworks and Meta-Languages: Theory and Practice,
+               {\rm Oxford, UK, 7th July 2018}},
+  series    = {Electronic Proceedings in Theoretical Computer Science},
+  volume    = {274},
+  publisher = {Open Publishing Association},
+  pages     = {1-10},
+  doi       = {10.4204/EPTCS.274.1},
+}
+
+@book{Coq,
+author="Bertot, Yves
+and Cast{\'e}ran, Pierre",
+title="Interactive Theorem Proving and Program Development: Coq'Art: The Calculus of Inductive Constructions",
+year="2004",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1--11",
+abstract="Coq [37] is a proof assistant with which students, researchers, or engineers can express specifications and develop programs that fulfill these specifications. This tool is well adapted to develop programs for which absolute trust is required: for example, in telecommunication, transportation, energy, banking, etc. In these domains the need for programs that rigorously conform to specifications justifies the effort required to verify these programs formally. We shall see in this book how a proof assistant like Coq can make this work easier.",
+isbn="978-3-662-07964-5",
+doi="10.1007/978-3-662-07964-5_1",
+url="https://doi.org/10.1007/978-3-662-07964-5_1"
+}
+
+@INPROCEEDINGS{PVS,  author={Rushby, J.},  booktitle={Fourth IEEE International Conference on Software Engineering and Formal Methods (SEFM'06)},   title={Tutorial: Automated Formal Methods with PVS, SAL, and Yices},   year={2006},  volume={},  number={},  pages={262-262},  doi={10.1109/SEFM.2006.37}}
+
+@book{JAPE,
+  title={Proof and Disproof in Formal Logic: An Introduction for Programmers},
+  author={Bornat, R.},
+  isbn={9780198530268},
+  lccn={2005019564},
+  series={Oxford texts in logic},
+  url={https://books.google.com.au/books?id=PxbY\_jIMdVEC},
+  year={2005},
+  publisher={Oxford University Press}
+}
+
+@article{LEO-II,
+author = {Benzmüller, Christoph and Sultana, Nik and Paulson, Lawrence and Theiss, Frank},
+year = {2015},
+month = {12},
+pages = {},
+title = {The Higher-Order Prover Leo-II},
+volume = {55},
+journal = {Journal of Automated Reasoning},
+doi = {10.1007/s10817-015-9348-y}
+}
+
+@InProceedings{Getfol,
+author="Giunchiglia, Fausto
+and Cimatti, Alessandro",
+editor="Fribourg, Laurent
+and Turini, Franco",
+title="Introspective metatheoretic reasoning",
+booktitle="Logic Program Synthesis and Transformation --- Meta-Programming in Logic",
+year="1994",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="425--439",
+abstract="This paper describes a reasoning system, called GETFOL, able to introspect (the code implementing) its own deductive machinery, to reason deductively about it in a declarative metatheory and to produce new executable code which can then be pushed back into the underlying implementation. In this paper we discuss the general architecture of GETFOL and the problems related to its implementation.",
+isbn="978-3-540-49104-0"
+}
+
+@InProceedings{Z/EVES,
+author="Saaltink, Mark",
+editor="Bowen, Jonathan P.
+and Hinchey, Michael G.
+and Till, David",
+title="The Z/EVES system",
+booktitle="ZUM '97: The Z Formal Specification Notation",
+year="1997",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="72--85",
+abstract="We describe the Z/EVES system, which allows Z specifications to be analysed in a number of different ways. Among the significant features of Z/EVES are domain checking, which ensures that a specification is meaningful, and a theorem prover that includes a decision procedure for simple arithmetic and a heuristic rewriting mechanism that recognizes ``obvious'' facts.",
+isbn="978-3-540-68490-9"
+}
+
+@misc{Atelier_B,
+author = {Clearsy},
+title = {The industrial tool to efficiently deploy the B method - Atelier B},
+url = {https://www.atelierb.eu/}
+}
+
+@InProceedings{Counterexample_generators,
+author="Manolios, Panagiotis",
+editor="Blazy, Sandrine
+and Paulin-Mohring, Christine
+and Pichardie, David",
+title="Counterexample Generation Meets Interactive Theorem Proving: Current Results and Future Opportunities",
+booktitle="Interactive Theorem Proving",
+year="2013",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="18--18",
+abstract="This tutorial will explore the integration of counterexample generation with interactive theorem proving, a capability that has long been on the wish list of users and developers of interactive theorem provers. While the generation of counterexamples is an undecidable problem, recent methods have shown that it is possible to generate counterexamples to conjectures for many interesting problems. This tutorial will review current counterexample generation technology and how it can be used to design, analyze, and reason about systems. The tutorial will include a demo using ACL2s, the ACL2 Sedan. During the tutorial, we will also discuss the pedagogical use of counterexample generation in ACL2s to help freshmen students learn about logic and program verification. Finally, we will discuss future research opportunities.",
+isbn="978-3-642-39634-2"
+}
+
+
+@InProceedings{Nitpick,
+author="Blanchette, Jasmin Christian
+and Nipkow, Tobias",
+editor="Kaufmann, Matt
+and Paulson, Lawrence C.",
+title="Nitpick: A Counterexample Generator for Higher-Order Logic Based on a Relational Model Finder",
+booktitle="Interactive Theorem Proving",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="131--146",
+abstract="Nitpick is a counterexample generator for Isabelle/HOL that builds on Kodkod, a SAT-based first-order relational model finder. Nitpick supports unbounded quantification, (co)inductive predicates and datatypes, and (co)recursive functions. Fundamentally a finite model finder, it approximates infinite types by finite subsets. As case studies, we consider a security type system and a hotel key card system. Our experimental results on Isabelle theories and the TPTP library indicate that Nitpick generates more counterexamples than other model finders for higher-order logic, without restrictions on the form of the formulas to falsify.",
+isbn="978-3-642-14052-5"
+}
+
+
+@phdthesis{Refute,
+  author  = {Tjark Weber},
+  title   = {{SAT}-based Finite Model Generation for Higher-Order Logic},
+  school  = {Institut f{\"u}r Informatik, Technische Universit{\"a}t M{\"u}nchen},
+  address = {Germany},
+  month   = apr,
+  year    = {2008},
+  url     = {http://nbn-resolving.de/urn/resolver.pl?urn:nbn:de:bvb:91-diss-20081018-676608-1-8}
+}
+
+@pdfthesis{Quickcheck,
+  title={Counterexample generation for higher-order logic using functional and logic programming},
+  author={Lukas Bulwahn},
+  year={2012}
+}
+
+@inproceedings{Nunchaku,
+  author    = {Simon Cruanes and
+               Jasmin Christian Blanchette},
+  editor    = {Jasmin Christian Blanchette and
+               Cezary Kaliszyk},
+  title     = {Extending Nunchaku to Dependent Type Theory},
+  booktitle = {Proceedings First International Workshop on Hammers for Type Theories,
+               HaTT@IJCAR 2016, Coimbra, Portugal, July 1, 2016},
+  series    = {{EPTCS}},
+  volume    = {210},
+  pages     = {3--12},
+  year      = {2016},
+  url       = {https://doi.org/10.4204/EPTCS.210.3},
+  doi       = {10.4204/EPTCS.210.3},
+  timestamp = {Sat, 19 Oct 2019 19:22:57 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/CruanesB16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{QED_Manifesto,
+  title={The QED Manifesto Revisited},
+  author={Freek Wiedijk},
+  year={2007}
+}
+
+@misc{Four_Color,
+  author={{G. Gonthier}},
+  title={{Formal proof of the Four-Color theorem}},
+  journal={{Notices of the American Mathematical Society}},
+  edition={{55}},
+  year={{2008}},
+  pages={{182–1393}}
+}
+
+@misc{Twelf,
+  author={Frank Pfenning and Carsten Schuermann},
+  title={{Twelf's User Guide}},
+  year={{2002}}
+}
+@inproceedings{Green2,
+author={Green, T. R. G},
+year={1989},
+title={Cognitive dimensions of notations},
+journal={A. Sutcliffe and L. Macaulay (Eds.) People and Computers V. Cambridge, UK: Cambridge University Press},
+pages={443--460}
+}
+
+@article{Vega-Lite,
+author = {Satyanarayan, Arvind and Moritz, Dominik and Wongsuphasawat, Kanit and Heer, Jeffrey},
+title = {Vega-Lite: A Grammar of Interactive Graphics},
+year = {2017},
+issue_date = {January 2017},
+publisher = {IEEE Educational Activities Department},
+address = {USA},
+volume = {23},
+number = {1},
+issn = {1077-2626},
+url = {https://doi.org/10.1109/TVCG.2016.2599030},
+doi = {10.1109/TVCG.2016.2599030},
+abstract = {We present Vega-Lite, a high-level grammar that enables rapid specification of interactive
+data visualizations. Vega-Lite combines a traditional grammar of graphics, providing
+visual encoding rules and a composition algebra for layered and multi-view displays,
+with a novel grammar of interaction. Users specify interactive semantics by composing
+selections. In Vega-Lite, a selection is an abstraction that defines input event processing,
+points of interest, and a predicate function for inclusion testing. Selections parameterize
+visual encodings by serving as input data, defining scale extents, or by driving conditional
+logic. The Vega-Lite compiler automatically synthesizes requisite data flow and event
+handling logic, which users can override for further customization. In contrast to
+existing reactive specifications, Vega-Lite selections decompose an interaction design
+into concise, enumerable semantic units. We evaluate Vega-Lite through a range of
+examples, demonstrating succinct specification of both customized interaction methods
+and common techniques such as panning, zooming, and linked selection.},
+journal = {IEEE Transactions on Visualization and Computer Graphics},
+month = jan,
+pages = {341–350},
+numpages = {10}
+}
+@article{Flyspeck, title={A FORMAL PROOF OF THE KEPLER CONJECTURE}, volume={5}, DOI={10.1017/fmp.2017.1}, journal={Forum of Mathematics, Pi}, publisher={Cambridge University Press}, author={HALES, THOMAS and ADAMS, MARK and BAUER, GERTRUD and DANG, TAT DAT and HARRISON, JOHN and HOANG, LE TRUONG and KALISZYK, CEZARY and MAGRON, VICTOR and MCLAUGHLIN, SEAN and NGUYEN, TAT THANG and et al.}, year={2017}, pages={e2}}
