Make more changes

--- a/References.bib
+++ b/References.bib
@@ -38,7 +38,7 @@
 }
 
 
-@inproceedings{matsakis_rust_2014,
+@inproceedings{Rust,
 	address = {New York, NY, USA},
 	series = {{HILT} '14},
 	title = {The {Rust} {Language}},
@@ -54,7 +54,7 @@
 	pages = {103--104}
 }
 
-@misc{elm_lang_book,
+@misc{Elm,
   title = {Elm Book},
   author = {Evan Czaplicki},
   url = {https://guide.elm-lang.org/}
@@ -1578,3 +1578,46 @@ pages = {341–350},
 numpages = {10}
 }
 @article{Flyspeck, title={A FORMAL PROOF OF THE KEPLER CONJECTURE}, volume={5}, DOI={10.1017/fmp.2017.1}, journal={Forum of Mathematics, Pi}, publisher={Cambridge University Press}, author={HALES, THOMAS and ADAMS, MARK and BAUER, GERTRUD and DANG, TAT DAT and HARRISON, JOHN and HOANG, LE TRUONG and KALISZYK, CEZARY and MAGRON, VICTOR and MCLAUGHLIN, SEAN and NGUYEN, TAT THANG and et al.}, year={2017}, pages={e2}}
+
+@article{CertifiedSoftware,
+author = {Shao, Zhong},
+title = {Certified Software},
+year = {2010},
+issue_date = {December 2010},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {53},
+number = {12},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/1859204.1859226},
+doi = {10.1145/1859204.1859226},
+abstract = {Only if the programmer can prove (through formal machine-checkable proofs) it is free
+of bugs with respect to a claim of dependability.},
+journal = {Commun. ACM},
+month = dec,
+pages = {56–66},
+numpages = {11}
+}
+@misc{FormalMethodsIndustry,
+      title={Formal Methods: From Academia to Industrial Practice. A Travel Guide}, 
+      author={Marieke Huisman and Dilian Gurov and Alexander Malkis},
+      year={2020},
+      eprint={2002.07279},
+      archivePrefix={arXiv},
+      primaryClass={cs.SE}
+}
+
+@InProceedings{Dijkstra,
+  author="Moore, J. Strother
+  and Zhang, Qiang",
+  editor="Hurd, Joe
+  and Melham, Tom",
+  title="Proof Pearl: Dijkstra's Shortest Path Algorithm Verified with ACL2",
+  booktitle="Theorem Proving in Higher Order Logics",
+  year="2005",
+  publisher="Springer Berlin Heidelberg",
+  address="Berlin, Heidelberg",
+  pages="373--384",
+  abstract="We briefly describe a mechanically checked proof of Dijkstra's shortest path algorithm for finite directed graphs with nonnegative edge lengths. The algorithm and proof are formalized in ACL2.",
+  isbn="978-3-540-31820-0"
+}
