--- a/References.bib
+++ b/References.bib
@@ -11,7 +11,6 @@
 	series = {{PPDP} '10},
 	title = {On {Theorem} {Proving} for {Program} {Checking}: {Historical} {Perspective} and {Recent} {Developments}},
 	isbn = {978-1-4503-0132-9},
-	doi = {10.1145/1836089.1836090},
 	abstract = {This article is a survey of recent results, related works and new challenges in automated theorem proving for program checking. The aim is to give some historical perspective, albeit necessarily incomplete, and highlight some of the turning points that made crucial advances possible.},
 	booktitle = {Proceedings of the 12th {International} {ACM} {SIGPLAN} {Symposium} on {Principles} and {Practice} of {Declarative} {Programming}},
 	publisher = {Association for Computing Machinery},
@@ -43,7 +42,6 @@
 	series = {{HILT} '14},
 	title = {The {Rust} {Language}},
 	isbn = {978-1-4503-3217-0},
-	doi = {10.1145/2663171.2663188},
 	abstract = {Rust is a new programming language for developing reliable and efficient systems. It is designed to support concurrency and parallelism in building applications and libraries that take full advantage of modern hardware. Rust's static type system is safe1 and expressive and provides strong guarantees about isolation, concurrency, and memory safety.Rust also offers a clear performance model, making it easier to predict and reason about program efficiency. One important way it accomplishes this is by allowing fine-grained control over memory representations, with direct support for stack allocation and contiguous record storage. The language balances such controls with the absolute requirement for safety: Rust's type system and runtime guarantee the absence of data races, buffer overflows, stack overflows, and accesses to uninitialized or deallocated memory.},
 	booktitle = {Proceedings of the 2014 {ACM} {SIGAda} {Annual} {Conference} on {High} {Integrity} {Language} {Technology}},
 	publisher = {Association for Computing Machinery},
@@ -65,7 +63,6 @@
 	series = {{SOSP} '09},
 	title = {{SeL4}: {Formal} {Verification} of an {OS} {Kernel}},
 	isbn = {978-1-60558-752-3},
-	doi = {10.1145/1629575.1629596},
 	abstract = {Complete formal verification is the only known way to guarantee that a system is free of programming errors.We present our experience in performing the formal, machine-checked verification of the seL4 microkernel from an abstract specification down to its C implementation. We assume correctness of compiler, assembly code, and hardware, and we used a unique design approach that fuses formal and operating systems techniques. To our knowledge, this is the first formal proof of functional correctness of a complete, general-purpose operating-system kernel. Functional correctness means here that the implementation always strictly follows our high-level abstract specification of kernel behaviour. This encompasses traditional design and implementation safety properties such as the kernel will never crash, and it will never perform an unsafe operation. It also proves much more: we can predict precisely how the kernel will behave in every possible situation.seL4, a third-generation microkernel of L4 provenance, comprises 8,700 lines of C code and 600 lines of assembler. Its performance is comparable to other high-performance L4 kernels.},
 	booktitle = {Proceedings of the {ACM} {SIGOPS} 22nd {Symposium} on {Operating} {Systems} {Principles}},
 	publisher = {Association for Computing Machinery},
@@ -92,7 +89,6 @@
 	title = {Practitioners' views on the use of formal methods: an industrial survey by structured interview},
 	volume = {43},
 	issn = {0950-5849},
-	doi = {10.1016/S0950-5849(00)00166-X},
 	abstract = {The recognised deficiency in the level of empirical investigation of software engineering methods is particularly acute in the area of formal methods, where reports about their usefulness vary widely. We interviewed several formal methods users about the use of formal methods and their impact on various aspects of software engineering including the effects on the company, its products and its development processes as well as pragmatic issues such as scalability, understandability and tool support. The interviews are a first stage of empirical assessment. Future work will investigate some of the issues raised using formal experimentation and case studies.},
 	number = {4},
 	journal = {Information and Software Technology},
@@ -146,7 +142,7 @@
 }
 
 
-@book{mcconnell_code_2004,
+@book{CodeComplete,
 	address = {USA},
 	title = {Code {Complete}, {Second} {Edition}},
 	isbn = {0-7356-1967-0},
@@ -188,7 +184,6 @@
 	series = {{HOPL} {III}},
 	title = {A {History} of {Haskell}: {Being} {Lazy} with {Class}},
 	isbn = {978-1-59593-766-7},
-	doi = {10.1145/1238844.1238856},
 	abstract = {This paper describes the history of Haskell, including its genesis and principles, technical contributions, implementations and tools, and applications and impact.},
 	booktitle = {Proceedings of the {Third} {ACM} {SIGPLAN} {Conference} on {History} of {Programming} {Languages}},
 	publisher = {Association for Computing Machinery},
@@ -203,7 +198,6 @@
 	title = {Hasochism: {The} {Pleasure} and {Pain} of {Dependently} {Typed} {Haskell} {Programming}},
 	volume = {48},
 	issn = {0362-1340},
-	doi = {10.1145/2578854.2503786},
 	abstract = {Haskell's type system has outgrown its Hindley-Milner roots to the extent that it now stretches to the basics of dependently typed programming. In this paper, we collate and classify techniques for programming with dependent types in Haskell, and contribute some new ones. In particular, through extended examples—merge-sort and rectangular tilings—we show how to exploit Haskell's constraint solver as a theorem prover, delivering code which, as Agda programmers, we envy. We explore the compromises involved in simulating variations on the theme of the dependent function space in an attempt to help programmers put dependent types to work, and to inform the evolving language design both of Haskell and of dependently typed languages more broadly.},
 	number = {12},
 	journal = {SIGPLAN Not.},
@@ -227,7 +221,6 @@ Publisher: Association for Computing Machinery},
 	author = {Kaufmann, Matt and Moore, J. Strother},
 	editor = {Hardin, David S.},
 	year = {2010},
-	doi = {10.1007/978-1-4419-1539-9_1},
 	pages = {1--21},
 	file = {2010_Book_DesignAndVerificationOfMicropr.pdf:/home/sam/Books/2010_Book_DesignAndVerificationOfMicropr.pdf:application/pdf}
 }
@@ -244,7 +237,6 @@ Publisher: Association for Computing Machinery},
 	title = {Dependent {Types} and {Multi}-{Monadic} {Effects} in {F}*},
 	volume = {51},
 	issn = {0362-1340},
-	doi = {10.1145/2914770.2837655},
 	abstract = {We present a new, completely redesigned, version of F*, a language that works both as a proof assistant as well as a general-purpose, verification-oriented, effectful programming language. In support of these complementary roles, F* is a dependently typed, higher-order, call-by-value language with \_primitive\_ effects including state, exceptions, divergence and IO. Although primitive, programmers choose the granularity at which to specify effects by equipping each effect with a monadic, predicate transformer semantics. F* uses this to efficiently compute weakest preconditions and discharges the resulting proof obligations using a combination of SMT solving and manual proofs. Isolated from the effects, the core of F* is a language of pure functions used to write specifications and proof terms—its consistency is maintained by a semantic termination check based on a well-founded order. We evaluate our design on more than 55,000 lines of F* we have authored in the last year, focusing on three main case studies. Showcasing its use as a general-purpose programming language, F* is programmed (but not verified) in F*, and bootstraps in both OCaml and F\#. Our experience confirms F*'s pay-as-you-go cost model: writing idiomatic ML-like code with no finer specifications imposes no user burden. As a verification-oriented language, our most significant evaluation of F* is in verifying several key modules in an implementation of the TLS-1.2 protocol standard. For the modules we considered, we are able to prove more properties, with fewer annotations using F* than in a prior verified implementation of TLS-1.2. Finally, as a proof assistant, we discuss our use of F* in mechanizing the metatheory of a range of lambda calculi, starting from the simply typed lambda calculus to System F-omega and even micro-F*, a sizeable fragment of F* itself—these proofs make essential use of F*'s flexible combination of SMT automation and constructive proofs, enabling a tactic-free style of programming and proving at a relatively large scale.},
 	number = {1},
 	journal = {SIGPLAN Not.},
@@ -270,8 +262,6 @@ Publisher: Association for Computing Machinery},
 	title = {The {Role} of the {Mizar} {Mathematical} {Library} for {Interactive} {Proof} {Development} in {Mizar}},
 	volume = {61},
 	issn = {1573-0670},
-	url = {https://doi.org/10.1007/s10817-017-9440-6},
-	doi = {10.1007/s10817-017-9440-6},
 	abstract = {The Mizar system is one of the pioneering systems aimed at supporting mathematical proof development on a computer that have laid the groundwork for and eventually have evolved into modern interactive proof assistants. We claim that an important milestone in the development of these systems was the creation of organized libraries accumulating all previously available formalized knowledge in such a way that new works could effectively re-use all previously collected notions. In the case of Mizar, the turning point of its development was the decision to start building the Mizar Mathematical Library as a centrally-managed knowledge base maintained together with the formalization language and the verification system. In this paper we show the process of forming this library, the evolution of its design principles, and also present some data showing its current use with the modern version of the Mizar proof checker, but also as a rich corpus of semantically linked mathematical data in various areas including web-based and natural language proof presentation, maths education, and machine learning based automated theorem proving.},
 	number = {1},
 	journal = {Journal of Automated Reasoning},
@@ -347,13 +337,11 @@ Publisher: Association for Computing Machinery},
 	address = {Cham},
 	title = {Programming and {Proving}},
 	isbn = {978-3-319-10542-0},
-	url = {https://doi.org/10.1007/978-3-319-10542-0_2},
 	abstract = {This chapter introduces HOL as a functional programming language and shows how to prove properties of functional programs by induction.},
 	booktitle = {Concrete {Semantics}: {With} {Isabelle}/{HOL}},
 	publisher = {Springer International Publishing},
 	author = {Nipkow, Tobias and Klein, Gerwin},
 	year = {2014},
-	doi = {10.1007/978-3-319-10542-0_2},
 	pages = {5--25}
 }
 
@@ -469,7 +457,6 @@ Publisher: Association for Computing Machinery},
 	volume = {7},
 	issn = {1045-926X},
 	url = {https://www.sciencedirect.com/science/article/pii/S1045926X96900099},
-	doi = {https://doi.org/10.1006/jvlc.1996.0009},
 	abstract = {The cognitive dimensions framework is a broad-brush evaluation technique for interactive devices and for non-interactive notations. It sets out a small vocabulary of terms designed to capture the cognitively-relevant aspects of structure, and shows how they can be traded off against each other. The purpose of this paper is to propose the framework as an evaluation technique for visual programming environments. We apply it to two commercially-available dataflow languages (with further examples from other systems) and conclude that it is effective and insightful; other HCI-based evaluation techniques focus on different aspects and would make good complements. Insofar as the examples we used are representative, current VPLs are successful in achieving a good ‘closeness of match’, but designers need to consider the ‘viscosity ’ (resistance to local change) and the ‘secondary notation’ (possibility of conveying extra meaning by choice of layout, colour, etc.).},
 	number = {2},
 	journal = {Journal of Visual Languages \& Computing},
@@ -485,7 +472,6 @@ Publisher: Association for Computing Machinery},
 	series = {{MSR} '11},
 	title = {A {Simpler} {Model} of {Software} {Readability}},
 	isbn = {978-1-4503-0574-7},
-	url = {https://doi.org/10.1145/1985441.1985454},
 	doi = {10.1145/1985441.1985454},
 	abstract = {Software readability is a property that influences how easily a given piece of code can be read and understood. Since readability can affect maintainability, quality, etc., programmers are very concerned about the readability of code. If automatic readability checkers could be built, they could be integrated into development tool-chains, and thus continually inform developers about the readability level of the code. Unfortunately, readability is a subjective code property, and not amenable to direct automated measurement. In a recently published study, Buse et al. asked 100 participants to rate code snippets by readability, yielding arguably reliable mean readability scores of each snippet; they then built a fairly complex predictive model for these mean scores using a large, diverse set of directly measurable source code properties. We build on this work: we present a simple, intuitive theory of readability, based on size and code entropy, and show how this theory leads to a much sparser, yet statistically significant, model of the mean readability scores produced in Buse's studies. Our model uses well-known size metrics and Halstead metrics, which are easily extracted using a variety of tools. We argue that this approach provides a more theoretically well-founded, practically usable, approach to readability measurement.},
 	booktitle = {Proceedings of the 8th {Working} {Conference} on {Mining} {Software} {Repositories}},
@@ -501,7 +487,6 @@ Publisher: Association for Computing Machinery},
 @article{buse_learning_2010,
 	title = {Learning a {Metric} for {Code} {Readability}},
 	volume = {36},
-	doi = {10.1109/TSE.2009.70},
 	number = {4},
 	journal = {IEEE Transactions on Software Engineering},
 	author = {Buse, R. P. L. and Weimer, W. R.},
@@ -526,7 +511,6 @@ Publisher: Association for Computing Machinery},
 	volume = {2},
 	issn = {00224812},
 	url = {http://www.jstor.org/stable/2268280},
-	doi = {10.2307/2268280},
 	number = {4},
 	urldate = {2021-03-01},
 	journal = {The Journal of Symbolic Logic},
@@ -541,7 +525,6 @@ Publisher: Association for Computing Machinery},
 	volume = {5},
 	issn = {00224812},
 	url = {http://www.jstor.org/stable/2266170},
-	doi = {10.2307/2266170},
 	number = {2},
 	urldate = {2021-03-01},
 	journal = {The Journal of Symbolic Logic},
@@ -555,7 +538,6 @@ Publisher: Association for Computing Machinery},
 	title = {History of {LISP}},
 	volume = {13},
 	issn = {0362-1340},
-	url = {https://doi.org/10.1145/960118.808387},
 	doi = {10.1145/960118.808387},
 	abstract = {This paper concentrates on the development of the basic ideas and distinguishes two periods - Summer 1958 through Summer 1958 when most of the key ideas were developed (some of which were implemented in the FORTRAN based FLPL), and Fall 1958 through 1962 when the programming language was implemented and applied to problems of artificial intelligence. After 1962, the development of LISP became multi-stranded, and different ideas were pursued in different places.},
 	number = {8},
@@ -1607,7 +1589,7 @@ numpages = {11}
       primaryClass={cs.SE}
 }
 
-@InProceedings{Dijkstra,
+@InProceedings{DijkstraACL2,
   author="Moore, J. Strother
   and Zhang, Qiang",
   editor="Hurd, Joe
@@ -1620,4 +1602,213 @@ numpages = {11}
   pages="373--384",
   abstract="We briefly describe a mechanically checked proof of Dijkstra's shortest path algorithm for finite directed graphs with nonnegative edge lengths. The algorithm and proof are formalized in ACL2.",
   isbn="978-3-540-31820-0"
+}
+
+@Inbook{Dijkstra,
+title="Shortest Paths",
+bookTitle="Algorithms and Data Structures: The Basic Toolbox",
+year="2008",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="191--215",
+abstract="The problem of the shortest, quickest or cheapest path is ubiquitous. You solve it daily. When you are in a location s and want to move to a location t, you ask for the quickest path from s to t. The fire department may want to compute the quickest routes from a fire station s to all locations in town -- the single-source problem. Sometimes we may even want a complete distance table from everywhere to everywhere -- the all-pairs problem. In a road atlas, you will usually find an all-pairs distance table for the most important cities.",
+isbn="978-3-540-77978-0",
+doi="10.1007/978-3-540-77978-0_10",
+url="https://doi.org/10.1007/978-3-540-77978-0_10"
+}
+
+
+
+@inproceedings{Snowballing,
+author = {Wohlin, Claes},
+title = {Guidelines for Snowballing in Systematic Literature Studies and a Replication in Software Engineering},
+year = {2014},
+isbn = {9781450324762},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2601248.2601268},
+doi = {10.1145/2601248.2601268},
+abstract = {Background: Systematic literature studies have become common in software engineering,
+and hence it is important to understand how to conduct them efficiently and reliably.Objective:
+This paper presents guidelines for conducting literature reviews using a snowballing
+approach, and they are illustrated and evaluated by replicating a published systematic
+literature review.Method: The guidelines are based on the experience from conducting
+several systematic literature reviews and experimenting with different approaches.Results:
+The guidelines for using snowballing as a way to search for relevant literature was
+successfully applied to a systematic literature review.Conclusions: It is concluded
+that using snowballing, as a first search strategy, may very well be a good alternative
+to the use of database searches.},
+booktitle = {Proceedings of the 18th International Conference on Evaluation and Assessment in Software Engineering},
+articleno = {38},
+numpages = {10},
+keywords = {systematic literature review, systematic mapping studies, replication, snowball search, snowballing},
+location = {London, England, United Kingdom},
+series = {EASE '14}
+}
+
+@InProceedings{QuickCheckIsabelle,
+author="Bulwahn, Lukas",
+editor="Hawblitzel, Chris
+and Miller, Dale",
+title="The New Quickcheck for Isabelle",
+booktitle="Certified Programs and Proofs",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="92--108",
+abstract="The new Quickcheck is a counterexample generator for Isabelle/HOL that uncovers faulty specifications and invalid conjectures using various testing strategies. The previous Quickcheck only tested conjectures by random testing. The new Quickcheck extends the previous one and integrates two novel testing strategies: exhaustive testing with concrete values; and symbolic testing, evaluating conjectures with a narrowing strategy. Orthogonally to the strategies, we address two general issues: First, we extend the class of executable conjectures and specifications, and second, we present techniques to deal with conditional conjectures, i.e., conjectures with premises. We evaluate the testing strategies and techniques on a number of specifications, functional data structures and a hotel key card system.",
+isbn="978-3-642-35308-6"
+}
+
+@InProceedings{QuickCheckAgda,
+author="Dybjer, Peter
+and Haiyan, Qiao
+and Takeyama, Makoto",
+editor="Basin, David
+and Wolff, Burkhart",
+title="Combining Testing and Proving in Dependent Type Theory",
+booktitle="Theorem Proving in Higher Order Logics",
+year="2003",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="188--203",
+abstract="We extend the proof assistant Agda/Alfa for dependent type theory with a modified version of Claessen and Hughes' tool QuickCheck for random testing of functional programs. In this way we combine testing and proving in one system. Testing is used for debugging programs and specifications before a proof is attempted. Furthermore, we demonstrate by example how testing can be used repeatedly during proof for testing suitable subgoals. Our tool uses testdata generators which are defined inside Agda/Alfa. We can therefore use the type system to prove properties about them, in particular surjectivity stating that all possible test cases can indeed be generated.",
+isbn="978-3-540-45130-3"
+}
+
+@inproceedings{PVSQuickCheck,
+  title={Random Testing in PVS},
+  author={Sam Owre},
+  year={2006}
+}
+@inproceedings{QuickChick,
+  title={QuickChick: Property-based testing for Coq},
+  author={Maxime D{\'e}n{\`e}s and Benjamin C. Pierce},
+  year={2014}
+}
+@inproceedings{DoubleCheck,
+author = {Eastlund, Carl},
+title = {DoubleCheck Your Theorems},
+year = {2009},
+isbn = {9781605587424},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1637837.1637844},
+doi = {10.1145/1637837.1637844},
+abstract = {Theorem proving in ACL2 is a complex undertaking. Initial attempts to admit a lemma
+often fail, in which case the programmer must either redirect ACL2's efforts or change
+the lemma. ACL2's output does not always indicate whether the formulation of the lemma
+or the proof process is at fault.In this paper we present the automated testing framework
+DoubleCheck as an extension of Dracula, the ACL2 development environment for DrScheme.
+DoubleCheck creates randomized inputs for ACL2 conjectures and uses those to test
+the conjecture. If these tests fail, the programmer is presented with a list of counterexamples
+to the conjecture. DoubleCheck can be used to guide the theorem proving process or,
+in a classroom setting, as a gentle introduction to automated program verification.},
+booktitle = {Proceedings of the Eighth International Workshop on the ACL2 Theorem Prover and Its Applications},
+pages = {42–46},
+numpages = {5},
+keywords = {ACL2, Dracula, QuickCheck, randomized testing},
+location = {Boston, Massachusetts, USA},
+series = {ACL2 '09}
+}
+@article{NanchakuCoq,
+author = {Cruanes, Simon and Blanchette, Jasmin},
+year = {2016},
+month = {06},
+pages = {3-12},
+title = {Extending Nunchaku to Dependent Type Theory},
+volume = {210},
+journal = {Electronic Proceedings in Theoretical Computer Science},
+doi = {10.4204/EPTCS.210.3}
+}
+@inproceedings{10.1145/351240.351266,
+author = {Claessen, Koen and Hughes, John},
+title = {QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs},
+year = {2000},
+isbn = {1581132026},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/351240.351266},
+doi = {10.1145/351240.351266},
+abstract = {Quick Check is a tool which aids the Haskell programmer in formulating and testing
+properties of programs. Properties are described as Haskell functions, and can be
+automatically tested on random input, but it is also possible to define custom test
+data generators. We present a number of case studies, in which the tool was successfully
+used, and also point out some pitfalls to avoid. Random testing is especially suitable
+for functional programs because properties can be stated at a fine grain. When a function
+is built from separately tested components, then random testing suffices to obtain
+good coverage of the definition under test.},
+booktitle = {Proceedings of the Fifth ACM SIGPLAN International Conference on Functional Programming},
+pages = {268–279},
+numpages = {12},
+series = {ICFP '00}
+}
+
+
+@article{QuickCheckHaskell,
+author = {Claessen, Koen and Hughes, John},
+title = {QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs},
+year = {2000},
+issue_date = {Sept. 2000},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {35},
+number = {9},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/357766.351266},
+doi = {10.1145/357766.351266},
+abstract = {Quick Check is a tool which aids the Haskell programmer in formulating and testing
+properties of programs. Properties are described as Haskell functions, and can be
+automatically tested on random input, but it is also possible to define custom test
+data generators. We present a number of case studies, in which the tool was successfully
+used, and also point out some pitfalls to avoid. Random testing is especially suitable
+for functional programs because properties can be stated at a fine grain. When a function
+is built from separately tested components, then random testing suffices to obtain
+good coverage of the definition under test.},
+journal = {SIGPLAN Not.},
+month = sep,
+pages = {268–279},
+numpages = {12}
+}
+@InProceedings{KodKod,
+author="Torlak, Emina
+and Jackson, Daniel",
+editor="Grumberg, Orna
+and Huth, Michael",
+title="Kodkod: A Relational Model Finder",
+booktitle="Tools and Algorithms for the Construction and Analysis of Systems",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="632--647",
+abstract="The key design challenges in the construction of a SAT-based relational model finder are described, and novel techniques are proposed to address them. An efficient model finder must have a mechanism for specifying partial solutions, an effective symmetry detection and breaking scheme, and an economical translation from relational to boolean logic. These desiderata are addressed with three new techniques: a symmetry detection algorithm that works in the presence of partial solutions, a sparse-matrix representation of relations, and a compact representation of boolean formulas inspired by boolean expression diagrams and reduced boolean circuits. The presented techniques have been implemented and evaluated, with promising results.",
+isbn="978-3-540-71209-1"
+}
+
+
+@misc{NanchakuLean,
+  url={{https://gitlab.binets.fr/pablo.le-henaff/nunchaku-lean}},
+  title={{nunchaku-lean · GitLab}},
+  author={{Pablo Le Hénaff}}
+}
+
+@InProceedings{CVC4,
+author="Barrett, Clark
+and Conway, Christopher L.
+and Deters, Morgan
+and Hadarean, Liana
+and Jovanovi{\'{c}}, Dejan
+and King, Tim
+and Reynolds, Andrew
+and Tinelli, Cesare",
+editor="Gopalakrishnan, Ganesh
+and Qadeer, Shaz",
+title="CVC4",
+booktitle="Computer Aided Verification",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="171--177",
+abstract="CVC4 is the latest version of the Cooperating Validity Checker. A joint project of NYU and U Iowa, CVC4 aims to support the useful feature set of CVC3 and SMT-LIBv2 while optimizing the design of the core system architecture and decision procedures to take advantage of recent engineering and algorithmic advances. CVC4 represents a completely new code base; it is a from-scratch rewrite of CVC3, and many subsystems have been completely redesigned. Additional decision procedures for CVC4 are currently under development, but for what it currently achieves, it is a lighter-weight and higher-performing tool than CVC3. We describe the system architecture, subsystems of note, and discuss some applications and continuing work.",
+isbn="978-3-642-22110-1"
 }
